[project]
name = "playout"
version = "2.0.1"
description = "Frikanalen playout system for CasparCG integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "pytz>=2025.2",
    "loguru>=0.7.0",
    "asyncio>=4.0.0",
    "frikanalen-django-api-client @ git+https://github.com/frikanalen/frikanalen-python-client.git@main",
]

[project.scripts]
playout = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["playout_lib"]

[dependency-groups]
dev = [
    "openapi-python-client>=0.28.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
